# rag_research_agent

./: .gitignore  README.md  api.py  app.md  app.py  main.py  pyproject.toml  requirements.txt
src/agent/: conversational_agent.py  memory_agent.py  orchestrator.py  orchestrator_prompt.py  query_router.py  router_prompt.py
src/ingestion/: embeddings.py  ingestion_pipeline.py  loader.py  splitter.py  vector_store.py
src/llm/: citation_builder.py  context_builder.py  formatter.py  generator_pipeline.py  hybrid_prompt.py  prompt.py  response_generator.py
src/memory/: chat_memory.py  memory_formatter.py
src/retrieval/: qwery_rewriter.py  reranker.py  retrieval_pipeline.py  retriever.py
src/voice/: speech_to_text.py  text_to_speech.py  voice_pipeline.py
